--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,70 +5,80 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center_vertical"
-    android:background="@android:color/holo_blue_bright"
+    android:fitsSystemWindows="true"
     tools:context=".activities.LoginActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextViewStyle"
-        android:layout_marginTop="-70dp"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/loginTextLabel">
-    </TextView>
+    <include layout="@layout/toolbar" />
 
-    <EditText
-        android:id="@+id/user"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        style="@style/EditTextStyle"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="25dp"
-        android:hint="@string/user"
-        android:ems="10"
-        android:inputType="text">
-    </EditText>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:background="@android:color/holo_blue_bright">
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        style="@style/EditTextStyle"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:hint="@string/password"
-        android:ems="10"
-        android:inputType="textPassword">
-    </EditText>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextViewStyle"
+            android:layout_marginTop="-70dp"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/loginTextLabel">
+        </TextView>
 
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        style="@style/ButtonStyle"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/loginLabel">
-    </Button>
+        <EditText
+            android:id="@+id/user"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            style="@style/EditTextStyle"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25dp"
+            android:hint="@string/user"
+            android:ems="10"
+            android:inputType="text">
+        </EditText>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextViewStyle"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="70dp"
-        android:text="@string/registerTextLabel">
-    </TextView>
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            style="@style/EditTextStyle"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:hint="@string/password"
+            android:ems="10"
+            android:inputType="textPassword">
+        </EditText>
 
-    <Button
-        android:id="@+id/registerButton"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        style="@style/ButtonStyle"
-        android:layout_marginTop="25dp"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/registerLabel">
-    </Button>
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            style="@style/ButtonStyle"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/loginLabel">
+        </Button>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextViewStyle"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="70dp"
+            android:text="@string/registerTextLabel">
+        </TextView>
+
+        <Button
+            android:id="@+id/registerButton"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            style="@style/ButtonStyle"
+            android:layout_marginTop="25dp"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/registerLabel">
+        </Button>
+
+    </LinearLayout>
 
 </LinearLayout>
