--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,75 +5,82 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center_vertical"
-    android:background="@android:color/holo_blue_bright"
     tools:context=".activities.RegisterActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextViewStyle"
-        android:layout_marginTop="-70dp"
-        android:gravity="center_horizontal"
-        android:text="@string/registerDescription">
-    </TextView>
+    <include layout="@layout/toolbar" />
 
-    <EditText
-        android:id="@+id/registerEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        style="@style/EditTextStyle"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:hint="@string/email"
-        android:ems="10"
-        android:inputType="textEmailAddress">
-    </EditText>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:background="@android:color/holo_blue_bright">
 
-    <EditText
-        android:id="@+id/registerUser"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        style="@style/EditTextStyle"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:hint="@string/user"
-        android:ems="10"
-        android:inputType="text">
-    </EditText>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextViewStyle"
+            android:layout_marginTop="-70dp"
+            android:gravity="center_horizontal"
+            android:text="@string/registerDescription">
+        </TextView>
 
-    <EditText
-        android:id="@+id/registerPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        style="@style/EditTextStyle"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:hint="@string/password"
-        android:ems="10"
-        android:inputType="textPassword">
-    </EditText>
+        <EditText
+            android:id="@+id/registerEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            style="@style/EditTextStyle"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:hint="@string/email"
+            android:ems="10"
+            android:inputType="textEmailAddress">
+        </EditText>
 
-    <EditText
-        android:id="@+id/registerPassword2"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        style="@style/EditTextStyle"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:hint="@string/password2"
-        android:ems="10"
-        android:inputType="textPassword">
-    </EditText>
+        <EditText
+            android:id="@+id/registerUser"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            style="@style/EditTextStyle"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:hint="@string/user"
+            android:ems="10"
+            android:inputType="text">
+        </EditText>
 
-    <Button
-        android:id="@+id/sendRegisterButton"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        style="@style/ButtonStyle"
-        android:layout_marginTop="25dp"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/enviar">
-    </Button>
+        <EditText
+            android:id="@+id/registerPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            style="@style/EditTextStyle"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:hint="@string/password"
+            android:ems="10"
+            android:inputType="textPassword">
+        </EditText>
 
+        <EditText
+            android:id="@+id/registerPassword2"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            style="@style/EditTextStyle"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:hint="@string/password2"
+            android:ems="10"
+            android:inputType="textPassword">
+        </EditText>
+
+        <Button
+            android:id="@+id/sendRegisterButton"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            style="@style/ButtonStyle"
+            android:layout_marginTop="25dp"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/enviar">
+        </Button>
+    </LinearLayout>
 </LinearLayout>
