--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,16 @@
         <item name="android:textAlignment">center</item>
     </style>
 
+    <style name="SpinnerStyle" parent="android:Widget.Spinner.DropDown">
+        <item name="android:textColorHint">@android:color/black</item>
+        <item name="android:background">@drawable/spinner_design</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:typeface">serif</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:paddingEnd">5dp</item>
+    </style>
+
     <style name="ButtonStyle" parent="android:Widget.Button">
         <item name="android:paddingStart">10dp</item>
         <item name="android:paddingEnd">10dp</item>
