--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,8 @@
             android:layout_marginTop="25dp"
             android:hint="@string/user"
             android:ems="10"
-            android:inputType="text">
+            android:inputType="text"
+            android:focusable="true">
         </EditText>
 
         <EditText
