--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,80 +6,82 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:background="@drawable/gradient"
     tools:context=".activities.LoginActivity">
 
-    <include layout="@layout/toolbar" />
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:background="@android:color/holo_blue_bright">
+        android:paddingTop="60dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal">
+
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="150dp"
+            android:src="@drawable/route_map_icon" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextViewStyle"
-            android:layout_marginTop="-70dp"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/loginTextLabel">
-        </TextView>
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:text="@string/app_name"/>
+
 
         <EditText
             android:id="@+id/user"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            style="@style/EditTextStyle"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="72dp"
             android:hint="@string/user"
             android:ems="10"
-            android:inputType="text"
+            android:background="#11000000"
+            android:textSize="16sp"
+            android:textAlignment="center"
+            android:inputType="textPersonName"
+            android:textColorHint="@drawable/selector_edit_text"
+            android:drawableLeft="@drawable/ic_action_user"
             android:focusable="true">
         </EditText>
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            style="@style/EditTextStyle"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
             android:hint="@string/password"
+            android:layout_marginTop="38dp"
+            android:textAlignment="center"
             android:ems="10"
+            android:background="#11000000"
+            android:textColorHint="@drawable/selector_edit_text"
+            android:drawableLeft="@drawable/ic_action_password"
             android:inputType="textPassword">
         </EditText>
 
+
         <Button
             android:id="@+id/loginButton"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
             style="@style/ButtonStyle"
+            android:layout_marginTop="40dp"
             android:layout_gravity="center_horizontal"
             android:text="@string/loginLabel">
         </Button>
 
         <TextView
+            android:id="@+id/registerButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextViewStyle"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="70dp"
-            android:text="@string/registerTextLabel">
-        </TextView>
-
-        <Button
-            android:id="@+id/registerButton"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            style="@style/ButtonStyle"
-            android:layout_marginTop="25dp"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/registerLabel">
-        </Button>
-
+            android:clickable="true"
+            android:focusable="true"
+            android:paddingTop="60dp"
+            android:textColor="@android:color/white"
+            android:text="@string/registerLabel"/>
     </LinearLayout>
 
 </LinearLayout>
