Update Register layout style

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,7 @@
             android:background="#11000000"
             android:textSize="16sp"
             android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:inputType="textPersonName"
             android:textColorHint="@drawable/selector_edit_text"
             android:drawableLeft="@drawable/ic_action_user"
@@ -56,6 +57,7 @@
             android:layout_marginTop="38dp"
             android:textAlignment="center"
             android:ems="10"
+            android:textColor="@android:color/white"
             android:background="#11000000"
             android:textColorHint="@drawable/selector_edit_text"
             android:drawableLeft="@drawable/ic_action_password"
