--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,82 +5,108 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/gradient"
     tools:context=".activities.RegisterActivity">
 
-    <include layout="@layout/toolbar" />
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:background="@android:color/holo_blue_bright">
+        android:paddingTop="35dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal">
+
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="150dp"
+            android:src="@drawable/route_map_icon" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextViewStyle"
-            android:layout_marginTop="-70dp"
-            android:gravity="center_horizontal"
-            android:text="@string/registerDescription">
-        </TextView>
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:text="@string/app_name"/>
+
 
         <EditText
             android:id="@+id/registerEmail"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            style="@style/EditTextStyle"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="50dp"
             android:hint="@string/email"
             android:ems="10"
-            android:inputType="textEmailAddress">
+            android:background="#11000000"
+            android:textSize="16sp"
+            android:textAlignment="center"
+            android:inputType="textEmailAddress"
+            android:textColorHint="@drawable/selector_edit_text"
+            android:drawableLeft="@drawable/ic_action_email"
+            android:focusable="true"
+            android:textColor="@android:color/white">
         </EditText>
 
         <EditText
             android:id="@+id/registerUser"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            style="@style/EditTextStyle"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
             android:hint="@string/user"
+            android:layout_marginTop="38dp"
+            android:textAlignment="center"
             android:ems="10"
-            android:inputType="text">
+            android:background="#11000000"
+            android:textColorHint="@drawable/selector_edit_text"
+            android:drawableLeft="@drawable/ic_action_user"
+            android:inputType="text"
+            android:focusable="true"
+            android:textColor="@android:color/white">
         </EditText>
 
         <EditText
             android:id="@+id/registerPassword"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            style="@style/EditTextStyle"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
             android:hint="@string/password"
+            android:layout_marginTop="38dp"
+            android:textAlignment="center"
             android:ems="10"
-            android:inputType="textPassword">
+            android:background="#11000000"
+            android:textColorHint="@drawable/selector_edit_text"
+            android:drawableLeft="@drawable/ic_action_password"
+            android:inputType="textPassword"
+            android:focusable="true"
+            android:textColor="@android:color/white">
         </EditText>
 
         <EditText
             android:id="@+id/registerPassword2"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            style="@style/EditTextStyle"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
             android:hint="@string/password2"
+            android:layout_marginTop="38dp"
+            android:textAlignment="center"
             android:ems="10"
-            android:inputType="textPassword">
+            android:background="#11000000"
+            android:textColorHint="@drawable/selector_edit_text"
+            android:drawableLeft="@drawable/ic_action_password"
+            android:inputType="textPassword"
+            android:textColor="@android:color/white">
         </EditText>
 
         <Button
             android:id="@+id/sendRegisterButton"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
             style="@style/ButtonStyle"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="40dp"
             android:layout_gravity="center_horizontal"
             android:text="@string/enviar">
         </Button>
+
     </LinearLayout>
+
 </LinearLayout>
