--- a/app/src/main/res/drawable/edit_text_design_error.xml
+++ b/app/src/main/res/drawable/edit_text_design_error.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#11000000"/>
     <stroke
         android:width="1dp"
-        android:color="@android:color/white"
+        android:color="#ED1C22"
         />
     <corners android:radius="5dp"/>
 </shape>
