--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,8 +18,8 @@
         android:gravity="center_horizontal">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="150dp"
+            android:layout_width="150dp"
+            android:layout_height="180dp"
             android:src="@drawable/route_map_icon" />
 
         <TextView
@@ -35,10 +35,10 @@
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="50dp"
             android:hint="@string/user"
             android:ems="10"
-            android:background="#11000000"
+            android:background="@drawable/edit_text_design"
             android:textSize="16sp"
             android:textAlignment="center"
             android:textColor="@android:color/white"
@@ -58,7 +58,7 @@
             android:textAlignment="center"
             android:ems="10"
             android:textColor="@android:color/white"
-            android:background="#11000000"
+            android:background="@drawable/edit_text_design"
             android:textColorHint="@drawable/selector_edit_text"
             android:drawableLeft="@drawable/ic_action_password"
             android:inputType="textPassword">
