--- a/app/src/main/res/layout/input_info_marker.xml
+++ b/app/src/main/res/layout/input_info_marker.xml
@@ -37,7 +37,7 @@
 
     <EditText
         android:id="@+id/input_info_description"
-        style="@style/EditTextStyle"
+        style="@style/EditTextStyleMap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="15"
