--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,15 @@
         <item name="android:textAlignment">center</item>
     </style>
 
+    <style name="EditTextStyleMap" parent="android:Widget.EditText">
+        <item name="android:textColorHint">@drawable/selector_edit_text_map</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:typeface">serif</item>
+        <item name="android:background">@drawable/edit_text_design_map</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
     <style name="SpinnerStyle" parent="android:Widget.Spinner.DropDown">
         <item name="android:textColorHint">@android:color/black</item>
         <item name="android:background">@drawable/spinner_design</item>
