--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,13 +36,13 @@
             android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="50dp"
-            android:hint="@string/user"
+            android:hint="@string/email"
             android:ems="10"
             android:background="@drawable/edit_text_design"
             android:textSize="16sp"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:inputType="textPersonName"
+            android:inputType="textEmailAddress"
             android:textColorHint="@drawable/selector_edit_text"
             android:drawableLeft="@drawable/ic_action_user"
             android:focusable="true">
