--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingTop="80dp"
+        android:paddingTop="35dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal">
 
@@ -43,6 +43,23 @@
             android:inputType="textEmailAddress"
             android:textColorHint="@drawable/selector_edit_text"
             android:drawableLeft="@drawable/ic_action_email"
+            android:focusable="true"
+            android:textColor="@android:color/white">
+        </EditText>
+
+        <EditText
+            android:id="@+id/registerAlias"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:hint="@string/alias"
+            android:layout_marginTop="38dp"
+            android:textAlignment="center"
+            android:ems="10"
+            android:background="@drawable/edit_text_design"
+            android:textColorHint="@drawable/selector_edit_text"
+            android:drawableLeft="@drawable/ic_action_user"
+            android:inputType="text"
             android:focusable="true"
             android:textColor="@android:color/white">
         </EditText>
