--- a/app/src/main/res/layout/filter_options.xml
+++ b/app/src/main/res/layout/filter_options.xml
@@ -72,7 +72,7 @@
 
         <EditText
             android:id="@+id/filterAuthor"
-            style="@style/EditTextStyle"
+            style="@style/EditTextStyleMap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="7"
