--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -37,7 +37,6 @@
             android:title="Tipo de mapa"
             android:summary="Elige el tipo de mapa por defecto"
             android:entries="@array/defaultTypeMap"
-            android:icon="@android:drawable/ic_menu_mapmode"
             android:entryValues="@array/defaultTypeMap"
             android:defaultValue="Normal" />
 
@@ -46,6 +45,12 @@
             android:title="Zoom"
             android:summary="Define el zoom por defecto al cargar el mapa"
             android:defaultValue="14"/>
+
+        <EditTextPreference
+            android:key="daysMarkers"
+            android:title="Fecha de los marcadores"
+            android:summary="Elija la fecha de antiguedad maxima de los marcadores"
+            android:defaultValue="1"/>
 
     </PreferenceCategory>
 
