--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -13,13 +13,13 @@
             android:summary="Modifique su nombre publico"
             android:dialogTitle="Nuevo alias"/>
 
-        <PreferenceScreen
+        <ListPreference
+            android:key="subscriptionPremium"
             android:title="Subscripcion Premium"
-            android:summary="Adquiere la version Premium para disfrutar de multiples ventajas">
-
-            <!-- 3ª Entrega: Falta intent a nueva activity -->
-
-        </PreferenceScreen>
+            android:summary="Adquiera la version premium para disfrutar de multiples ventajas"
+            android:entries="@array/subscriptionSpinnerType"
+            android:entryValues="@array/subscriptionSpinnerType"
+            android:defaultValue="Desactivada"/>
 
         <ListPreference
             android:key="networkType"
@@ -52,23 +52,5 @@
             android:summary="Elija la fecha de antiguedad maxima de los marcadores"
             android:defaultValue="1"/>
 
-    </PreferenceCategory>
-
-    <PreferenceCategory android:title="INFORMACIÓN">
-        <PreferenceScreen
-            android:title="Manual de uso"
-            android:summary="Aprende a utilizar correctamente la aplicación">
-
-            <!-- 3ª Entrega: Falta intent a nueva activity -->
-
-        </PreferenceScreen>
-
-        <PreferenceScreen
-            android:title="Acerca de mi"
-            android:summary="Conoce mas sobre el creador de la aplicación">
-
-            <!-- 3ª Entrega: Falta intent a nueva activity -->
-
-        </PreferenceScreen>
     </PreferenceCategory>
 </PreferenceScreen>
